Fix the close button on windows without a title
- Previously going into Help > About > View widgets would show a window
  where the close button was rendered slightly out of the top of the
  window
- This was because without the title taking up a line, the title bar
  shrunk to be too small to contain the close button
- This commit makes sure that the title can never take up less than a
  line in height

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -757,6 +757,10 @@ nav.spreadsheet-color-indicator ~ #sidebar-dock-wrapper {
 	display: none;
 }
 
+.ui-dialog-title {
+	min-height: 1em;
+}
+
 .lokdialog_container.ui-dialog.ui-widget-content {
 	padding: 0px;
 	overflow: visible;
